# raw-telegram-data-to-analytics-api

./: .gitignore  README.md  docker-compose.yml
scripts/: raw_data_to_db.py  scrape.py
src/: pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 12f14de019c8_all_primary_keys_made_non_nullable.py  15eb4fe8a608_unique_contranit_added_to_all_primary_.py  960ce3efd886_aggregation_tables_added_for_daily_.py
src/api/: config.py  conn_db.py  crud.py  main.py  models.py  routes.py  schemas.py  service.py
src/helper/: data_loader.py  data_saver.py
src/scripts/: intent_and_product_extraction.py  raw_data_to_db.py  yolo_prediction.ipynb
telegram_medical_data_dbt_project/: dbt_project.yml
telegram_medical_data_dbt_project/models/aggregate/: agg_messages_daily.sql  agg_messages_monthly.sql  agg_messages_yearly.sql  agg_top_products.sql
telegram_medical_data_dbt_project/models/mart/dim/: dim_channels.sql  dim_dates.sql
telegram_medical_data_dbt_project/models/mart/fact/: fact_messages.sql  fct_image_detections.sql
telegram_medical_data_dbt_project/models/staging/: raw_image_items.sql  raw_llm_extracts_for_messages.sql  raw_messages.sql  raw_messages_images.sql  schema.yml  stg_image_items.sql  stg_llm_extracts_for_messages.sql  stg_messages.sql
